# dnd-inspect

./: .gitignore  App.cpp  App.h  CMakeLists.txt  DNDEncoder.cpp  DNDEncoder.h  DragSourceList.cpp  DragSourceList.h  DragSourceView.cpp  DragSourceView.h  DropDialog.cpp  DropDialog.h  DropTargetView.cpp  DropTargetView.h  Globals.cpp  Globals.h  LICENSE  MainWindow.cpp  MainWindow.h  MyTabView.cpp  MyTabView.h  README.md  main.cpp
_testcontent/: lorem_ipsum.txt
_testcontent/audio/: ccrma_bachfugue_48k16.oga
